# plf

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  bridge.go  go.mod  mock_data.txt  test_mcp.plf  test_swarm_cycle.json  test_tools.plf  test_webhook.plf  testsuite.json
.github/workflows/: release.yml
bindings/nodejs/: README.md  index.js  package.json
bindings/python/: README.md  plf_python.py  pyproject.toml  setup.py
cmd/plf/: main.go
devtools/vscode/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json  vscode-plf-1.0.0.vsix  vscode-plf-1.0.1.vsix
devtools/vscode/syntaxes/: plf.tmLanguage.json
docs/: SPEC.md  TEST_RESULTS.md  implementation_plan.md  walkthrough.md
examples/: agent_session_logger.plf  integration_example.go  restaurant_bot.plf  sysadmin.plf  whatsapp_router.plf
examples/_agentos/: guardrails.plf  nexus_overlord.plf  test_agentos_full_integration.go
examples/agentos/: project_manager.plf  test_qwen_plf_compliance.go
pkg/evaluator/: evaluator.go
pkg/parser/: parser.go  parser_test.go
pkg/renderer/: renderer.go  renderer_test.go
pkg/types/: types.go
pkg/validator/: validator.go  validator_test.go
